<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_pedidos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.acalfortaleza.acalapp.PedidosActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light">

        <ImageView
            android:layout_width="107dp"
            android:layout_height="124dp"
            app:srcCompat="@mipmap/acalcionovo"
            android:id="@+id/imageView4" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/BemVindo"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:id="@+id/textView2"
                android:layout_weight="0"
                android:textColor="@android:color/background_light" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0">

                <TextView
                    android:text="@string/Casa"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/background_light" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/Consulte"
                        android:textStyle="bold"
                        android:textSize="@dimen/activity_vertical_margin"

                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linPedidos">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="Histórico de pedidos:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:textAlignment="center"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:id="@+id/Texto1"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ListView
                    android:layout_width="176dp"
                    android:layout_height="334dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/listaPedidos" />

                <ListView
                    android:layout_width="176dp"
                    android:layout_height="334dp"


                    android:layout_marginTop="15dp"
                    android:id="@+id/listaStatus" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
