<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.acalfortaleza.acalapp.ConsultaEntregaActivity"
    android:background="@android:color/background_light">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light">

        <ImageView
            android:layout_width="107dp"
            android:layout_height="124dp"
            app:srcCompat="@mipmap/acalcionovo"
            android:id="@+id/imageView4" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/BemVindo"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:id="@+id/textView2"
                android:layout_weight="0"
                android:textColor="@android:color/background_light" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0">

                <TextView
                    android:text="@string/Casa"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/background_light" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/Consulte"
                        android:textStyle="bold"
                        android:textSize="@dimen/activity_vertical_margin"

                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="0"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="165dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.62">

            <TextView
                android:text="Informe o Cpf/Cnpj:"
                android:textStyle="bold"
                android:textSize="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="9"
                        android:maxLength="14"
                        android:id="@+id/edtCnpj"
                        android:layout_weight="1"
                        android:background="?attr/actionModeBackground" />

                    <Button
                        android:text="Consultar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnCnpj"
                        android:onClick="ConsultarCgccpf"
                        android:layout_weight="1" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lnaConsulta"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:layout_weight="0.62">

            <TextView
                android:text="Informe o Pedido:"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_marginTop="20dp"
                android:layout_weight="0" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="9"
                        android:maxLength="9"
                        android:id="@+id/edtPedido"
                        android:layout_weight="1"
                        android:background="?attr/actionModeBackground" />

                    <Button
                        android:text="@string/consultar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnConsultar"
                        android:onClick="cliqueConsultar"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lnaIFinal"
            android:layout_marginTop="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.62">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:weightSum="1"
                    android:id="@+id/lnaIcn">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            app:srcCompat="@mipmap/wattt"
                            android:id="@+id/imageView8"
                            android:layout_weight="2.08" />

                        <TextView
                            android:text="@string/zap"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                             android:id="@+id/textView6"
                            android:textSize="12sp"

                            android:textColor="#89fe03" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="84dp"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="97dp"
                            android:layout_height="56dp"
                            android:layout_marginTop="0dp"
                            app:srcCompat="@mipmap/diskacal"
                            android:id="@+id/imageView7"
                            android:layout_alignTop="@+id/imageView5"
                            android:layout_toLeftOf="@+id/imageView5"
                            android:layout_toStartOf="@+id/imageView5"
                            android:layout_marginRight="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="0.41" />

                        <TextView
                            android:text="@string/disk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:id="@+id/textView7"
                            android:textSize="12sp"
                            android:textColor="@android:color/holo_blue_light" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="122dp"
                            android:layout_height="86dp"
                            app:srcCompat="@mipmap/logogptwacal"
                            android:layout_marginLeft="6dp"
                            android:id="@+id/imageView5"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="76dp"
                            android:layout_weight="0.10" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    app:srcCompat="@mipmap/footer"
                    android:id="@+id/imageView6" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
